# m-c99

./: .gitignore  Makefile  README.md  build.bat  c99mtlc.cabal  vendor-libmtlc.sh
app/: Main.hs
cbits/: blob.c
docs/: diagnostics.md  implementation.md
include/: assert.h  ctype.h  direct.h  errno.h  fcntl.h  float.h  inttypes.h  io.h  limits.h  math.h  setjmp.h  signal.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  unistd.h  wchar.h  windows.h
include/sys/: stat.h
libmtlc/lib/: mtlc.lib
rt/: c99rt.h  rt_alloc.c  rt_ctype.c  rt_format.c  rt_jmp.c  rt_math.c  rt_os.c  rt_scan.c  rt_start.c  rt_stdio.c  rt_stdlib.c  rt_string.c  rt_wstring.c
src/: Mtlc.hs  ast.h  ctype.c  ctype.h  lexer.c  lower.c  main.c  parser.c  parser.h  preprocess.c  preprocess.h  sema.c  sema.h  token.c  token.h
src/C99/: Ast.hs  CType.hs  Common.hs  Diag.hs  Explain.hs  Lexer.hs  Lower.hs  Parser.hs  Preprocess.hs  Runtime.hs  Sema.hs  StaticRename.hs  Token.hs
src/Mtlc/: FFI.hs
tests/: addr_taken_global_init.c  bitfield.c  complex.c  designated.c  difftest.sh  fptr.c  global_agg.c  global_agg_init.c  global_array_init.c  multifile_a.c  multifile_b.c  partial_zero.c  pp_include.c  pp_macros.c  ptr_arith.c  run_suite.ps1  runtime_selfcontained.c  stack_array.c  static_a.c  static_b.c  static_shadow.c  static_use.c  string_lit.c  struct_assign.c  struct_return.c  switch_ft.c  variadic.c  vla.c
tests/diag/: cascade.c  flow.c  phases.c  redefinition.c  stray_char.c  undeclared.c  unused.c
tests/diff/: README.md  bitfield_signed.c  call_arg_convert.c  compound_lit.c  (+38 more)
(+11 files in other folders)
